--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -144,6 +144,22 @@
                         <!-- jhipster-needle-add-element-to-admin-menu - JHipster will add entities to the admin menu here -->
                     </ul>
                 </li>
+
+                <li ui-sref-active="active" uib-dropdown class="dropdown pointer" ng-switch-when="true" ng-controller="JhiContextController as contextVm">
+                    <a class="dropdown-toggle" uib-dropdown-toggle href="" ng-if="contextVm.contexts.length > 1">
+                        <span>
+                            <span class="glyphicon glyphicon-flag"></span>
+                            <span class="hidden-sm" data-translate="global.menu.context">Context</span>
+                            <b class="caret"></b>
+                        </span>
+                    </a>
+                    <ul class="dropdown-menu" uib-dropdown-menu ng-if="contextVm.contexts.length > 1">
+                        <li ng-repeat="context in contextVm.contexts">
+                            <a href="" ng-click="contextVm.changeContext(context);vm.collapseNavbar();">{{context}}</a>
+                        </li>
+                    </ul>
+                </li>
+
                 <li ui-sref-active="active" uib-dropdown class="dropdown pointer" ng-controller="JhiLanguageController as languageVm">
                     <a class="dropdown-toggle" uib-dropdown-toggle href="" ng-if="languageVm.languages.length > 1">
                         <span>
